--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div class="container">
         <h1>Cálculo de Intervalo de 1:30</h1>
         <label for="horaSaida">Hora que você saiu (HH:MM):</label>
-        <input type="time" id="horaSaida" required>
+        <input type="time" id="horaSaida" value="07:30" required>
         <button onclick="calcularIntervalo()">Calcular</button>
         <p id="resultado"></p>
     </div>
